rabbitmq-chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq-system
  labels:
    istio-injection: enabled
