rabbitmq-chart/templates/request.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-check
  namespace: rabbitmq-system
spec:
  selector:
    matchLabels:
      app: rabbitmq-app
  jwtRules:
    - issuer: "http://10.63.33.181:32569/realms/AuthTest"
      jwksUri: "http://10.63.33.181:32569/realms/AuthTest/protocol/openid-connect/certs"
