rabbitmq-chart/templates/rabbitmq-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq-app
    namespace: rabbitmq-system
    labels:
      app: rabbitmq-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-app
  template:
    metadata:
      labels:
        app: rabbitmq-app
    spec:
      containers:
        - name: rabbitmq-app
          image: polasomeshwar/rabbit-mq:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
