rabbitmq-chart/templates/rabbitmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq-service
    namespace: rabbitmq-system
spec:
  type: NodePort
  selector:
    app: rabbitmq-app
  ports:
    - port: 8080
      targetPort: 8080
