rabbitmq-chart/templates/ingressGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rabbit-gateway
  namespace: rabbitmq-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "rabbitmq.example.com"  # replace with your actual hostname
    port:
      number: 80
      name: http
      protocol: HTTP
