rabbitmq-chart/templates/virtaulService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-virtualservice
  namespace: rabbitmq-system
spec:
  hosts:
  - "rabbitmq.example.com"  # replace with your actual hostname
  gateways:
  - rabbitmq-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: rabbitmq-service.rabbitmq-system.svc.cluster.local
          port:
            number: 8080
      rewrite:
        uri: "/"
        authority:  rabbitmq-service.rabbitmq-system.svc.cluster.local:8080
