rabbitmq-chart/templates/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: user-check
  namespace: rabbitmq-system
spec:
  selector:
    matchLabels:
      app: rabbitmq-app
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
